List hidden directories

--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -9,10 +9,10 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-      - name: Run commands
+      - name: Run Linux Commands
         run: |
          pwd
-         ls -lrth
+         ls -lrtha
          echo $HOME
          echo ${{ env.WORK_DIR }}
       - name: Parse Issue Template
