Update github action

--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -16,7 +16,7 @@ jobs:
          echo $HOME
          echo ${{ env.WORK_DIR }}
       - name: Parse Issue Template
-        uses: ./
+        uses: ./.github/actions/issue-body-parser
         id: issue-parser
         with:
           template-path: ./.github/ISSUE_TEMPLATE/onboard-new-service.yaml # optional but recommended
