Remove redundant files

--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -1,24 +1,55 @@
-name: Sample Workflow
-run-name: ${{ github.actor }} is creating a custom GitHub Actions
+# name: Sample Workflow
+# run-name: ${{ github.actor }} is creating a custom GitHub Actions
+# on:
+#   issues:
+#     types: [opened]
+# jobs:
+#   process-issue:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout Repository
+#         uses: actions/checkout@v3
+#       - name: Run Linux Commands
+#         run: |
+#          pwd
+#          ls -lrtha
+#          echo $HOME
+#          echo ${{ env.WORK_DIR }}
+#       - name: Parse Issue Template
+#         uses: ./.github/actions/issue-body-parser
+#         id: issue-parser
+#         with:
+#           template-path: ./.github/ISSUE_TEMPLATE/onboard-new-service.yaml # optional but recommended
+      
+#       - run: cat ${HOME}/issue-parser-result.json
+
+
+
+name: Create New Service Account
+run-name: ${{ github.actor }} is creating a new service account
 on:
   issues:
     types: [opened]
 jobs:
   process-issue:
+    if: contains(github.event.issue.labels.*.name, 'onboard_new_service')
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
+      - name: Checkout
         uses: actions/checkout@v3
-      - name: Run Linux Commands
+
+      - name: Commands
         run: |
          pwd
          ls -lrtha
          echo $HOME
          echo ${{ env.WORK_DIR }}
-      - name: Parse Issue Template
+
+      - name: Parse Issue body
         uses: ./.github/actions/issue-body-parser
         id: issue-parser
         with:
           template-path: ./.github/ISSUE_TEMPLATE/onboard-new-service.yaml # optional but recommended
       
-      - run: cat ${HOME}/issue-parser-result.json
+      - name: Output Issue Body 
+        run: cat ${HOME}/issue-parser-result.json
