Add script to update/create files

--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -19,3 +19,6 @@ jobs:
       
       - name: Output Issue Body 
         run: cat ${HOME}/issue-parser-result.json
+
+      - name: Make File Changes
+        run: python3 ./v2/infra/scripts/create_new_service_account.py
