--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -21,4 +21,7 @@ jobs:
         run: cat ${HOME}/issue-parser-result.json
 
       - name: Make File Changes
-        run: python3 ./v2/infra/scripts/create_new_service_account.py
+        run: |
+          pwd
+          ls -lrtha
+          python3 ./v2/infra/scripts/create_new_service_account.py
