--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -21,7 +21,10 @@ jobs:
         run: cat ${HOME}/issue-parser-result.json
 
       - name: Make File Changes
-        run: |
-          pwd
-          ls -lrtha
-          python3 ./v2/scripts/create_new_service_account.py
+        run: python3 ./v2/scripts/create_new_service_account.py
+      
+      - name: Create Pull request
+        run: | 
+          git add .
+          git commit -S -m "New Commit"
+
