--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -25,6 +25,9 @@ jobs:
       
       - name: Create Pull request
         run: | 
+          git checkout 
           git add .
           git commit -S -m "New Commit"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
