--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -25,9 +25,11 @@ jobs:
       
       - name: Create Pull request
         run: | 
+          git --version
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+          git status
           git checkout 
           git add .
           git commit -S -m "New Commit"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
