Add github token to pull request step

--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -32,4 +32,6 @@ jobs:
           git checkout 
           git add .
           git commit -S -m "New Commit"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
