Add debug commands

--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -21,10 +21,14 @@ jobs:
         run: cat ${HOME}/issue-parser-result.json
 
       - name: Make File Changes
-        run: python3 ./v2/scripts/create_new_service_account.py
+        run: |
+          python3 ./v2/scripts/create_new_service_account.py
+          ls -lrtha
       
       - name: Create Pull request
         run: | 
+          pwd
+          ls -lrtha
           git --version
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
