Add debug commands

--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -23,12 +23,15 @@ jobs:
       - name: Make File Changes
         run: |
           python3 ./v2/scripts/create_new_service_account.py
+          pwd
           ls -lrtha
+          ls -lrtha v2/infra/terraform/
       
       - name: Create Pull request
         run: | 
           pwd
           ls -lrtha
+          ls -lrtha v2/infra/terraform/
           git --version
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
