Add debug commands

--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -25,13 +25,13 @@ jobs:
           python3 ./v2/scripts/create_new_service_account.py
           pwd
           ls -lrtha
-          ls -lrtha v2/infra/terraform/
+          ls -lrtha v2/infra/terraform/service-teams
       
       - name: Create Pull request
         run: | 
           pwd
           ls -lrtha
-          ls -lrtha v2/infra/terraform/
+          ls -lrtha v2/infra/terraform/service-teams
           git --version
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
