Update debug lines

--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -36,8 +36,8 @@ jobs:
           git config user.email "<>"
           git status
           git checkout 
-          git add .
-          git commit -S -m "New Commit"
+          git add --all
+          git commit -m "New Commit"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
