--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -38,6 +38,7 @@ jobs:
           git checkout 
           git add --all
           git commit -m "New Commit"
+          git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
