Commit to a feature branch

--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -11,6 +11,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Create new branch
+        run: |
+          git checkout -b feature/{github.run_number} main
+
       - name: Parse Issue body
         uses: ./.github/actions/issue-body-parser
         id: issue-parser
@@ -26,7 +30,7 @@ jobs:
           pwd
           ls -lrtha
       
-      - name: Create Pull request
+      - name: Commit Changes
         run: | 
           pwd
           ls -lrtha
