Update brancg name

--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -13,7 +13,7 @@ jobs:
 
       - name: Create new branch
         run: |
-          git checkout -b feature/{github.run_number} main
+          git checkout -b feature/${{ github.run_number }} main
 
       - name: Parse Issue body
         uses: ./.github/actions/issue-body-parser
