--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -13,7 +13,7 @@ jobs:
 
       - name: Create new branch
         run: |
-          git checkout -b feature/${{ github.run_number }} main
+          git checkout -b feature/issue-${{ github.run_number }} main
 
       - name: Parse Issue body
         uses: ./.github/actions/issue-body-parser
@@ -33,7 +33,6 @@ jobs:
       - name: Commit Changes
         run: | 
           pwd
-          ls -lrtha
           ls -lrtha v2/infra/terraform/service-teams/ams-test-fahad
           git --version
           git config user.name "GitHub Actions Bot"
@@ -41,8 +40,8 @@ jobs:
           git status
           git checkout 
           git add --all
-          git commit -m "New Commit"
-          git push
+          git commit -m "${{ github.event.title }}"
+          git push -u feature/issue-${{ github.run_number }} origin
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
