Update commit message

--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -40,7 +40,7 @@ jobs:
           git status
           git checkout 
           git add --all
-          git commit -m "${{ github.event.title }}"
+          git commit -m "${{ github.event.issue.title }}"
           git push -u feature/issue-${{ github.run_number }} origin
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
