--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -32,12 +32,14 @@ jobs:
       
       - name: Commit Changes
         run: | 
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+
           pwd
           ls -lrtha v2/infra/terraform/service-teams/ams-test-fahad
           git --version
-          git config user.name "GitHub Actions Bot"
-          git config user.email "<>"
-          git status
+          git branch
+
           git checkout 
           git add --all
           git commit -m "${{ github.event.issue.title }}"
