fix push command

--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -43,7 +43,7 @@ jobs:
           git checkout 
           git add --all
           git commit -m "${{ github.event.issue.title }}"
-          git push -u issue-${{ github.run_number }} origin
+          git push -u origin issue-${{ github.run_number }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
