--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -44,7 +44,7 @@ jobs:
           git add --all
           git commit -m "${{ github.event.issue.title }}"
           git push -u origin issue-${{ github.run_number }}
-          gh pr create --base main
+          gh pr create --base main --title "${{ github.event.issue.title }}" --body ""
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
