Add debug lines

--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -13,7 +13,7 @@ jobs:
 
       - name: Create new branch
         run: |
-          git checkout -b issue-${{ github.run_number }} main
+          git checkout -b ${{ github.actor }}-issue-${{ github.run_number }} main
 
       - name: Parse Issue body
         uses: ./.github/actions/issue-body-parser
@@ -43,7 +43,7 @@ jobs:
           git checkout 
           git add --all
           git commit -m "${{ github.event.issue.title }}"
-          git push -u origin issue-${{ github.run_number }}
+          git push -u origin ${{ github.actor }}-issue-${{ github.run_number }}
           gh pr create --base main --title "${{ github.event.issue.title }}" --body ""
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
