--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Make File Changes
         run: |
+          ls -lrtha ./v2/infra/terraform/service-teams/ams-test-six
           python3 ./v2/scripts/create_new_service_account.py
           pwd
           ls -lrtha
