--- a/.github/workflows/create_service_account.yaml
+++ b/.github/workflows/create_service_account.yaml
@@ -19,25 +19,20 @@ jobs:
         uses: ./.github/actions/issue-body-parser
         id: issue-parser
         with:
-          template-path: ./.github/ISSUE_TEMPLATE/onboard-new-service.yaml # optional but recommended
+          template-path: ./.github/ISSUE_TEMPLATE/onboard-new-service.yaml
       
-      - name: Output Issue Body 
-        run: cat ${HOME}/issue-parser-result.json
+      # - name: Output Issue Body 
+      #   run: cat ${HOME}/issue-parser-result.json
 
       - name: Make File Changes
         run: |
-          ls -lrtha ./v2/infra/terraform/service-teams/ams-test-six
           python3 ./v2/scripts/create_new_service_account.py
-          pwd
-          ls -lrtha
       
       - name: Commit Changes
         run: | 
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
 
-          pwd
-          ls -lrtha v2/infra/terraform/service-teams/ams-test-fahad
           git --version
           git branch
 
