--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -15,7 +15,8 @@ jobs:
         run: | 
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
-
+          pwd
+          ls -lrth
           date > gh-issue-template-poc/issue.template.md
           
           python3 ${{ secrets.GITHUB_TOKEN }}
